--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
     "@nrwl/angular": "15.8.9",
+    "axios": "^1.0.0",
+    "express": "^4.18.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -30,13 +32,17 @@
     "@angular/language-service": "~15.2.0",
     "@nrwl/cypress": "15.8.9",
     "@nrwl/eslint-plugin-nx": "15.8.9",
+    "@nrwl/express": "^15.8.9",
     "@nrwl/jest": "15.8.9",
     "@nrwl/js": "15.8.9",
     "@nrwl/linter": "15.8.9",
+    "@nrwl/node": "15.8.9",
+    "@nrwl/webpack": "15.8.9",
     "@nrwl/workspace": "15.8.9",
     "@schematics/angular": "~15.2.0",
+    "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
-    "@types/node": "16.11.7",
+    "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "cypress": "^12.2.0",
@@ -45,6 +51,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.0.0",
     "nx": "15.8.9",
     "prettier": "^2.6.2",
